[metadata]
name = pynamelix
description = API to namelix.com
url = https://github.com/axju/pynamelix
author = axju
author_email = moin@axju.de
license = MIT
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[tox:tox]
envlist =
    py{36,37,38,39}
    flake8
    pylint
    cov-report
skipt_missing_interpreters = True

[testenv]
setenv =
    COVERAGE_FILE = .coverage.{envname}
deps =
    coverage
    pytest
commands =
    python -m pip install -e .
    python -m coverage run --source=pynamelix -m pytest

[testenv:flake8]
deps = flake8
commands = flake8 pynamelix

[testenv:pylint]
deps = pylint
commands = pylint --rcfile=setup.cfg pynamelix

[testenv:cov-report]
skipsdist = True
setenv =
    COVERAGE_FILE = .coverage
deps = coverage
commands =
    coverage combine
    coverage report

[flake8]
max-line-length = 160
ignore = E722

[pylint]
disable =
  missing-docstring,
  dangerous-default-value,
  bare-except
max-line-length = 160
